# lord_of_the_rings_sdk

./: LICENSE.txt  README.md  design.md  pyproject.toml  setup.cfg
src/lord_of_the_rings_sdk/: __init__.py
src/lord_of_the_rings_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_lord_of_the_rings.py
