[metadata]
name = lord_of_the_rings_sdk
version = 0.0.5
author = Emmanuel Nwaegunwa
author_email = emmanuelnwaegunwa@gmail.com
description = Lord of the rings sdk in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Maxzeno/lord_of_the_rings_sdk
project_urls =
    Bug Tracker = https://github.com/Maxzeno/lord_of_the_rings_sdk/issues
    repository = https://github.com/Maxzeno/lord_of_the_rings_sdk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src